test/libsolidity/syntaxTests/parsing/constant_is_keyword.sol
contract Foo {
	uint constant = 4;
}
// ----
// ParserError: (30-30): Expected identifier, got 'Assign'
